Monitoring: update standalone tpl

--- a/Monitoring/xpipe-standalone/prometheus/prometheus.yml
+++ b/Monitoring/xpipe-standalone/prometheus/prometheus.yml
@@ -11,81 +11,80 @@ global:
 
 # Load and evaluate rules in this file every 'evaluation_interval' seconds.
 rule_files:
-  #- 'rules/*.yml'
-  - 'rules/apache/lusitaniae-apache-exporter.yml'
-  - 'rules/apc-ups/apcupsd_exporter.yml'
-  - 'rules/argocd/embedded-exporter.yml'
-  - 'rules/blackbox/blackbox-exporter.yml'
-  - 'rules/cassandra/criteo-cassandra-exporter.yml'
-  - 'rules/cassandra/instaclustr-cassandra-exporter.yml'
-  - 'rules/ceph/embedded-exporter.yml'
-  - 'rules/clickhouse/embedded-exporter.yml'
-  - 'rules/cloudflare/lablabs-cloudflare-exporter.yml'
-  - 'rules/consul/consul-exporter.yml'
-  - 'rules/coredns/embedded-exporter.yml'
-  - 'rules/cortex/embedded-exporter.yml'
-  - 'rules/docker-containers/google-cadvisor.yml'
-  - 'rules/elasticsearch/prometheus-community-elasticsearch-exporter.yml'
-  - 'rules/etcd/embedded-exporter.yml'
-  - 'rules/freeswitch/znerol-freeswitch-exporter.yml'
-  - 'rules/graph-node/embedded-exporter.yml'
-  - 'rules/hadoop/jmx_exporter.yml'
-  - 'rules/haproxy/embedded-exporter-v2.yml'
-  #- 'rules/haproxy/haproxy-exporter-v1.yml'
-  - 'rules/hashicorp-vault/embedded-exporter.yml'
+#  - 'rules/apache/lusitaniae-apache-exporter.yml'
+#  - 'rules/apc-ups/apcupsd_exporter.yml'
+#  - 'rules/argocd/embedded-exporter.yml'
+#  - 'rules/blackbox/blackbox-exporter.yml'
+#  - 'rules/cassandra/criteo-cassandra-exporter.yml'
+#  - 'rules/cassandra/instaclustr-cassandra-exporter.yml'
+#  - 'rules/ceph/embedded-exporter.yml'
+#  - 'rules/clickhouse/embedded-exporter.yml'
+#  - 'rules/cloudflare/lablabs-cloudflare-exporter.yml'
+#  - 'rules/consul/consul-exporter.yml'
+#  - 'rules/coredns/embedded-exporter.yml'
+#  - 'rules/cortex/embedded-exporter.yml'
+#  - 'rules/docker-containers/google-cadvisor.yml'
+#  - 'rules/elasticsearch/prometheus-community-elasticsearch-exporter.yml'
+#  - 'rules/etcd/embedded-exporter.yml'
+#  - 'rules/freeswitch/znerol-freeswitch-exporter.yml'
+#  - 'rules/graph-node/embedded-exporter.yml'
+#  - 'rules/hadoop/jmx_exporter.yml'
+#  - 'rules/haproxy/embedded-exporter-v2.yml'
+#  #- 'rules/haproxy/haproxy-exporter-v1.yml'
+#  - 'rules/hashicorp-vault/embedded-exporter.yml'
   - 'rules/host-and-hardware/global-monitoring.yml'
-  - 'rules/host-and-hardware/node-exporter.yml'
-  - 'rules/istio/embedded-exporter.yml'
-  - 'rules/jenkins/metric-plugin.yml'
-  - 'rules/juniper/czerwonk-junos-exporter.yml'
-  - 'rules/jvm/jvm-exporter.yml'
-  - 'rules/kafka/danielqsj-kafka-exporter.yml'
-  - 'rules/kafka/linkedin-kafka-exporter.yml'
-  - 'rules/kubernetes/kubestate-exporter.yml'
-  - 'rules/linkerd/embedded-exporter.yml'
-  - 'rules/loki/embedded-exporter.yml'
-  - 'rules/minio/embedded-exporter.yml'
-  - 'rules/mongodb/dcu-mongodb-exporter.yml'
-  - 'rules/mongodb/percona-mongodb-exporter.yml'
-  - 'rules/mongodb/stefanprodan-mgob-exporter.yml'
-  - 'rules/mysql/mysqld-exporter.yml'
-  - 'rules/nats/nats-exporter.yml'
-  - 'rules/netdata/embedded-exporter.yml'
-  - 'rules/nginx/knyar-nginx-exporter.yml'
-  - 'rules/nomad/embedded-exporter.yml'
-  - 'rules/openebs/embedded-exporter.yml'
-  - 'rules/patroni/embedded-exporter-patroni.yml'
-  - 'rules/pgbouncer/spreaker-pgbouncer-exporter.yml'
-  - 'rules/php-fpm/bakins-fpm-exporter.yml'
-  - 'rules/postgresql/postgres-exporter.yml'
-  - 'rules/prometheus-self-monitoring/embedded-exporter.yml'
-  - 'rules/promtail/embedded-exporter.yml'
-  - 'rules/pulsar/embedded-exporter.yml'
-  - 'rules/rabbitmq/kbudde-rabbitmq-exporter.yml'
-  - 'rules/rabbitmq/rabbitmq-exporter.yml'
-  #- 'rules/redis/oliver006-redis-exporter.yml'
-  - 'rules/sidekiq/strech-sidekiq-exporter.yml'
-  - 'rules/smart-device-monitoring/smartctl-exporter.yml'
-  - 'rules/solr/embedded-exporter.yml'
-  - 'rules/speedtest/nlamirault-speedtest-exporter.yml'
-  - 'rules/sqlserver/ozarklake-mssql-exporter.yml'
-  - 'rules/ssl/tls/ribbybibby-ssl-exporter.yml'
-  - 'rules/thanos/thanos-bucket-replicate.yml'
-  - 'rules/thanos/thanos-compactor.yml'
-  - 'rules/thanos/thanos-component-absent.yml'
-  - 'rules/thanos/thanos-query.yml'
-  - 'rules/thanos/thanos-receiver.yml'
-  - 'rules/thanos/thanos-ruler.yml'
-  - 'rules/thanos/thanos-sidecar.yml'
-  - 'rules/thanos/thanos-store.yml'
-  #- 'rules/traefik/embedded-exporter-v1.yml'
-  - 'rules/traefik/embedded-exporter-v2.yml'
-  - 'rules/vmware/pryorda-vmware-exporter.yml'
-  - 'rules/windows-server/windows-exporter.yml'
-  - 'rules/zfs/node-exporter.yml'
-  - 'rules/zfs/zfs_exporter.yml'
-  - 'rules/zookeeper/cloudflare-kafka-zookeeper-exporter.yml'
-  - 'rules/zookeeper/dabealu-zookeeper-exporter.yml'
+#  - 'rules/host-and-hardware/node-exporter.yml'
+#  - 'rules/istio/embedded-exporter.yml'
+#  - 'rules/jenkins/metric-plugin.yml'
+#  - 'rules/juniper/czerwonk-junos-exporter.yml'
+#  - 'rules/jvm/jvm-exporter.yml'
+#  - 'rules/kafka/danielqsj-kafka-exporter.yml'
+#  - 'rules/kafka/linkedin-kafka-exporter.yml'
+#  - 'rules/kubernetes/kubestate-exporter.yml'
+#  - 'rules/linkerd/embedded-exporter.yml'
+#  - 'rules/loki/embedded-exporter.yml'
+#  - 'rules/minio/embedded-exporter.yml'
+#  - 'rules/mongodb/dcu-mongodb-exporter.yml'
+#  - 'rules/mongodb/percona-mongodb-exporter.yml'
+#  - 'rules/mongodb/stefanprodan-mgob-exporter.yml'
+#  - 'rules/mysql/mysqld-exporter.yml'
+#  - 'rules/nats/nats-exporter.yml'
+#  - 'rules/netdata/embedded-exporter.yml'
+#  - 'rules/nginx/knyar-nginx-exporter.yml'
+#  - 'rules/nomad/embedded-exporter.yml'
+#  - 'rules/openebs/embedded-exporter.yml'
+#  - 'rules/patroni/embedded-exporter-patroni.yml'
+#  - 'rules/pgbouncer/spreaker-pgbouncer-exporter.yml'
+#  - 'rules/php-fpm/bakins-fpm-exporter.yml'
+#  - 'rules/postgresql/postgres-exporter.yml'
+#  - 'rules/prometheus-self-monitoring/embedded-exporter.yml'
+#  - 'rules/promtail/embedded-exporter.yml'
+#  - 'rules/pulsar/embedded-exporter.yml'
+#  - 'rules/rabbitmq/kbudde-rabbitmq-exporter.yml'
+#  - 'rules/rabbitmq/rabbitmq-exporter.yml'
+#  #- 'rules/redis/oliver006-redis-exporter.yml'
+#  - 'rules/sidekiq/strech-sidekiq-exporter.yml'
+#  - 'rules/smart-device-monitoring/smartctl-exporter.yml'
+#  - 'rules/solr/embedded-exporter.yml'
+#  - 'rules/speedtest/nlamirault-speedtest-exporter.yml'
+#  - 'rules/sqlserver/ozarklake-mssql-exporter.yml'
+#  - 'rules/ssl/tls/ribbybibby-ssl-exporter.yml'
+#  - 'rules/thanos/thanos-bucket-replicate.yml'
+#  - 'rules/thanos/thanos-compactor.yml'
+#  - 'rules/thanos/thanos-component-absent.yml'
+#  - 'rules/thanos/thanos-query.yml'
+#  - 'rules/thanos/thanos-receiver.yml'
+#  - 'rules/thanos/thanos-ruler.yml'
+#  - 'rules/thanos/thanos-sidecar.yml'
+#  - 'rules/thanos/thanos-store.yml'
+#  #- 'rules/traefik/embedded-exporter-v1.yml'
+#  - 'rules/traefik/embedded-exporter-v2.yml'
+#  - 'rules/vmware/pryorda-vmware-exporter.yml'
+#  - 'rules/windows-server/windows-exporter.yml'
+#  - 'rules/zfs/node-exporter.yml'
+#  - 'rules/zfs/zfs_exporter.yml'
+#  - 'rules/zookeeper/cloudflare-kafka-zookeeper-exporter.yml'
+#  - 'rules/zookeeper/dabealu-zookeeper-exporter.yml'
 
 # alert
 alerting:
