Monitoring: update standalone tpl

--- a/Monitoring/xpipe-standalone/prometheus/prometheus.yml
+++ b/Monitoring/xpipe-standalone/prometheus/prometheus.yml
@@ -21,11 +21,11 @@ rule_files:
 #  - 'rules/clickhouse/embedded-exporter.yml'
 #  - 'rules/cloudflare/lablabs-cloudflare-exporter.yml'
 #  - 'rules/consul/consul-exporter.yml'
-#  - 'rules/coredns/embedded-exporter.yml'
+  - 'rules/coredns/embedded-exporter.yml'
 #  - 'rules/cortex/embedded-exporter.yml'
-#  - 'rules/docker-containers/google-cadvisor.yml'
+  - 'rules/docker-containers/google-cadvisor.yml'
 #  - 'rules/elasticsearch/prometheus-community-elasticsearch-exporter.yml'
-#  - 'rules/etcd/embedded-exporter.yml'
+  - 'rules/etcd/embedded-exporter.yml'
 #  - 'rules/freeswitch/znerol-freeswitch-exporter.yml'
 #  - 'rules/graph-node/embedded-exporter.yml'
 #  - 'rules/hadoop/jmx_exporter.yml'
@@ -33,14 +33,14 @@ rule_files:
 #  #- 'rules/haproxy/haproxy-exporter-v1.yml'
 #  - 'rules/hashicorp-vault/embedded-exporter.yml'
   - 'rules/host-and-hardware/global-monitoring.yml'
-#  - 'rules/host-and-hardware/node-exporter.yml'
+  - 'rules/host-and-hardware/node-exporter.yml'
 #  - 'rules/istio/embedded-exporter.yml'
 #  - 'rules/jenkins/metric-plugin.yml'
 #  - 'rules/juniper/czerwonk-junos-exporter.yml'
 #  - 'rules/jvm/jvm-exporter.yml'
 #  - 'rules/kafka/danielqsj-kafka-exporter.yml'
 #  - 'rules/kafka/linkedin-kafka-exporter.yml'
-#  - 'rules/kubernetes/kubestate-exporter.yml'
+  - 'rules/kubernetes/kubestate-exporter.yml'
 #  - 'rules/linkerd/embedded-exporter.yml'
 #  - 'rules/loki/embedded-exporter.yml'
 #  - 'rules/minio/embedded-exporter.yml'
@@ -50,7 +50,7 @@ rule_files:
 #  - 'rules/mysql/mysqld-exporter.yml'
 #  - 'rules/nats/nats-exporter.yml'
 #  - 'rules/netdata/embedded-exporter.yml'
-#  - 'rules/nginx/knyar-nginx-exporter.yml'
+  - 'rules/nginx/knyar-nginx-exporter.yml'
 #  - 'rules/nomad/embedded-exporter.yml'
 #  - 'rules/openebs/embedded-exporter.yml'
 #  - 'rules/patroni/embedded-exporter-patroni.yml'
@@ -68,7 +68,7 @@ rule_files:
 #  - 'rules/solr/embedded-exporter.yml'
 #  - 'rules/speedtest/nlamirault-speedtest-exporter.yml'
 #  - 'rules/sqlserver/ozarklake-mssql-exporter.yml'
-#  - 'rules/ssl/tls/ribbybibby-ssl-exporter.yml'
+  - 'rules/ssl/tls/ribbybibby-ssl-exporter.yml'
 #  - 'rules/thanos/thanos-bucket-replicate.yml'
 #  - 'rules/thanos/thanos-compactor.yml'
 #  - 'rules/thanos/thanos-component-absent.yml'
