Monitoring: update standalone tpl

--- a/Monitoring/xpipe-standalone/prometheus/prometheus.yml
+++ b/Monitoring/xpipe-standalone/prometheus/prometheus.yml
@@ -21,11 +21,11 @@ rule_files:
 #  - 'rules/clickhouse/embedded-exporter.yml'
 #  - 'rules/cloudflare/lablabs-cloudflare-exporter.yml'
 #  - 'rules/consul/consul-exporter.yml'
-  - 'rules/coredns/embedded-exporter.yml'
+#  - 'rules/coredns/embedded-exporter.yml'
 #  - 'rules/cortex/embedded-exporter.yml'
-  - 'rules/docker-containers/google-cadvisor.yml'
+#  - 'rules/docker-containers/google-cadvisor.yml'
 #  - 'rules/elasticsearch/prometheus-community-elasticsearch-exporter.yml'
-  - 'rules/etcd/embedded-exporter.yml'
+#  - 'rules/etcd/embedded-exporter.yml'
 #  - 'rules/freeswitch/znerol-freeswitch-exporter.yml'
 #  - 'rules/graph-node/embedded-exporter.yml'
 #  - 'rules/hadoop/jmx_exporter.yml'
