BaseImages: update minecraft

--- a/BaseImages/minecraft/src/Dockerfile
+++ b/BaseImages/minecraft/src/Dockerfile
@@ -34,6 +34,10 @@ RUN wget https://sindria-minecraft-packages.s3.eu-south-1.amazonaws.com/server-$
     chown -R ${SINDRIA_USER}:${SINDRIA_USER} /var/www/app
 
 #java -Xmx1024M -Xms1024M -jar minecraft_server.1.17.1.jar nogui
-ENTRYPOINT exec screen -dmS mc java -javaagent:/opt/jmx_prometheus_javaagent.jar=$JMX_EXPORTER_PORT:/opt/config.yaml $JAVA_OPTS -jar server.jar nogui
+#ENTRYPOINT exec screen -dmS mc java -javaagent:/opt/jmx_prometheus_javaagent.jar=$JMX_EXPORTER_PORT:/opt/config.yaml $JAVA_OPTS -jar server.jar nogui
+
+# Setting entrypoint
+COPY resources/bin/entrypoint.sh /usr/local/bin/entrypoint.sh
+ENTRYPOINT ["/bin/bash", "/usr/local/bin/entrypoint.sh"]
 
 USER ${SINDRIA_USER}
