BaseImages: update minecraft

--- a/BaseImages/minecraft/src/Dockerfile
+++ b/BaseImages/minecraft/src/Dockerfile
@@ -26,19 +26,23 @@ USER root
 # Install minecraft, setting timezone and reset permission
 COPY resources/minecraft/eula.txt /var/www/app/eula.txt
 #COPY resources/minecraft/server.properties /var/www/app/server.properties
+COPY resources/bin/minecraft.sh /usr/local/bin/minecraft.sh
+COPY resources/bin/entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN wget https://sindria-minecraft-packages.s3.eu-south-1.amazonaws.com/server-${MINECRAFT_VERSION}.jar -P /var/www/app && \
     mv /var/www/app/server-${MINECRAFT_VERSION}.jar /var/www/app/server.jar && \
     mkdir -p /var/www/app/plugins && \
     ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && \
     chmod -R 771 /var/www/app && \
-    chown -R ${SINDRIA_USER}:${SINDRIA_USER} /var/www/app
+    chown -R ${SINDRIA_USER}:${SINDRIA_USER} /var/www/app && \
+    chown ${SINDRIA_USER}:${SINDRIA_USER} /usr/local/bin/minecraft.sh && \
+    chmod +x /usr/local/bin/minecraft.sh && \
+    chown ${SINDRIA_USER}:${SINDRIA_USER} /usr/local/bin/entrypoint.sh && \
+    chmod +x /usr/local/bin/entrypoint.sh
+
 
 #java -Xmx1024M -Xms1024M -jar minecraft_server.1.17.1.jar nogui
 #ENTRYPOINT exec java -javaagent:/opt/jmx_prometheus_javaagent.jar=$JMX_EXPORTER_PORT:/opt/config.yaml $JAVA_OPTS -jar server.jar nogui
 
-# Setting entrypoint
-COPY resources/bin/minecraft.sh /usr/local/bin/minecraft.sh
-COPY resources/bin/entrypoint.sh /usr/local/bin/entrypoint.sh
 ENTRYPOINT ["/bin/bash", "/usr/local/bin/entrypoint.sh"]
 
 USER ${SINDRIA_USER}
