BaseImages: update minecraft

--- a/BaseImages/minecraft/src/Dockerfile
+++ b/BaseImages/minecraft/src/Dockerfile
@@ -16,7 +16,7 @@ LABEL \
 ENV TZ=${TIMEZONE}
 ENV SINDRIA_USER="sindria"
 ENV SINDRIA_USER_HOME="/home/sindria"
-
+ENV SCREENDIR=$HOME/.screen
 ENV MINECRAFT_VERSION=${TAG_SUFFIX}
 ENV JAVA_OPTS="-Xmx1024M -Xms1024M"
 ENV JMX_EXPORTER_PORT="8080"
