Logging: init business domain, BaseImages: update minecraft with 1.21 support

--- a/.github/workflows/apm-cd-standalone-void.yml
+++ b/.github/workflows/apm-cd-standalone-void.yml
@@ -3,7 +3,7 @@ name: APM CD Standalone
 on:
   push:
     branches:
-      - "master"
+      - "tmp"
     paths:
       - APM/xpipe-standalone/**/*.*
       - .github/workflows/apm-cd-standalone-void.yml
