--- a/IaC/sindria-mc/deployment.yaml
+++ b/IaC/sindria-mc/deployment.yaml
@@ -63,8 +63,8 @@ spec:
         name: mc-demo
         tty: false
         stdin: true
-        #command: [ "tail" ]
-        #args: [ "-f", "/dev/null" ]
+        command: [ "tail" ]
+        args: [ "-f", "/dev/null" ]
         ports:
         - containerPort: 25565
           hostPort: 25565
