--- a/IaC/sindria-mc/pvc.yaml
+++ b/IaC/sindria-mc/pvc.yaml
@@ -30,3 +30,19 @@ spec:
   resources:
     requests:
       storage: 1Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  labels:
+    app: mc-demo
+  name: mc-demo-cache-pvc
+  namespace: sindria-mc
+#provisioner: kubernetes.io/aws-ebs
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: longhorn
+  resources:
+    requests:
+      storage: 1Gi
