--- a/Core/xpipe-ecommerce/.env.local
+++ b/Core/xpipe-ecommerce/.env.local
@@ -2,11 +2,12 @@
 HOST_USER_UID=1000
 
 # System Configuration
-BASE_PATH=/home/ubuntu/xdev/storage/Projects
+#BASE_PATH=/home/ubuntu/xdev/storage/Projects
+BASE_PATH=/Users/lucapitzoi/Projects
 
 # APP Configuration
-APP_NAME=xp-ecommerce
-APP_DOMAIN=xp-ecommerce.local
+APP_NAME=xpipe-ecommerce
+APP_DOMAIN=xpipe-ecommerce.local
 APP_CODE_PATH=/var/www/app
 APP_LOGS_PATH=storage/logs
 APP_DATA_PATH=storage/data
@@ -16,10 +17,10 @@ APP_CONFIG_PATH=config
 TIMEZONE=Europe/Rome
 
 # Network Configuration
-NETWORK_SUBNET=172.16.0.0/24
-APP_IP_ADDRESS=172.16.0.5
-DB_IP_ADDRESS=172.16.0.6
-ELASTICSEARCH_IP_ADDRESS=172.16.0.7
+NETWORK_SUBNET=172.16.10.0/24
+APP_IP_ADDRESS=172.16.10.100
+DB_IP_ADDRESS=172.16.10.200
+ELASTICSEARCH_IP_ADDRESS=172.16.10.201
 
 # Database Configuration
 DB_DATABASE=app
@@ -39,5 +40,5 @@ NGINX_PHP_VERSION=7.4
 NGINX_PHP_PM_MAX_CHILDREN=32
 
 # Dev
-PROJECT_PATH=Sindria/XPipe/Web/xp-ecommerce
+PROJECT_PATH=Sindria/XPipe/Core/xpipe-ecommerce
 CODE_PATH=src
