--- a/.github/workflows/core-ci-ecommerce-void.yml
+++ b/.github/workflows/core-ci-ecommerce-void.yml
@@ -13,7 +13,7 @@ defaults:
     working-directory: Core/xpipe-ecommerce
 
 jobs:
-  build_publish:
+  build:
     name: Build
     runs-on: ubuntu-latest
     steps:
@@ -34,6 +34,7 @@ jobs:
       run: bash build_all.sh ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG} ${RELEASE_VERSION}
   deploy:
     name: Deploy
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
