Core: update k8s - ecommerce

--- a/.github/workflows/core-ci-ecommerce-void.yml
+++ b/.github/workflows/core-ci-ecommerce-void.yml
@@ -51,6 +51,11 @@ jobs:
         env:
           KUBE_CONFIG: ${{ secrets.WOPR_KUBECONFIG }}
         with:
+          args: apply -f IaC/sindria-mc/namespace.yaml
+      - uses: actions-hub/kubectl@master
+        env:
+          KUBE_CONFIG: ${{ secrets.WOPR_KUBECONFIG }}
+        with:
           args: apply -f k8s/resources/cloud/namespace.yaml
       - uses: actions-hub/kubectl@master
         env:
